--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
-
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
@@ -15,9 +14,10 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6",
     "sass": "^1.54.4",
-    "typescript": "^4.7.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -55,6 +54,8 @@
     "@types/react": "^18.0.17",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
-    "@types/sass": "^1.43.1"
+    "@types/sass": "^1.43.1",
+    "@types/uuid": "^8.3.4",
+    "typescript": "^4.7.4"
   }
 }
